// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`status command matching interactions observes matching operations 1`] = `
Array [
  Object {
    "kind": "interaction-captured",
    "method": "get",
    "path": "/orders/3/products",
  },
  Object {
    "capturedPath": "/orders/3/products",
    "kind": "interaction-matched-operation",
    "method": "get",
    "path": "/orders/{orderId}/products",
  },
  Object {
    "kind": "interaction-captured",
    "method": "post",
    "path": "/orders",
  },
  Object {
    "capturedPath": "/orders",
    "kind": "interaction-matched-operation",
    "method": "post",
    "path": "/orders",
  },
]
`;

exports[`status command matching interactions observes unmatching methods 1`] = `
Array [
  Object {
    "kind": "interaction-captured",
    "method": "patch",
    "path": "/orders/3/products",
  },
  Object {
    "kind": "interaction-unmatched-method",
    "method": "patch",
    "path": "/orders/{orderId}/products",
  },
  Object {
    "kind": "interaction-captured",
    "method": "get",
    "path": "/orders",
  },
  Object {
    "kind": "interaction-unmatched-method",
    "method": "get",
    "path": "/orders",
  },
]
`;

exports[`status command matching interactions observes unmatching paths 1`] = `
Array [
  Object {
    "kind": "interaction-captured",
    "method": "get",
    "path": "/orders/3",
  },
  Object {
    "kind": "interaction-unmatched-path",
    "method": "get",
    "path": "/orders/3",
  },
  Object {
    "kind": "interaction-captured",
    "method": "get",
    "path": "/orders/4/details",
  },
  Object {
    "kind": "interaction-unmatched-path",
    "method": "get",
    "path": "/orders/4/details",
  },
  Object {
    "kind": "interaction-captured",
    "method": "post",
    "path": "/products",
  },
  Object {
    "kind": "interaction-unmatched-path",
    "method": "post",
    "path": "/products",
  },
]
`;
